[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-t-beamline"
version = "0.0.1"
authors = [{ name="Lucas Malin", email="lukemalin@gmail.com" }]
description = "Python class for creating ImpactT.in files and running them from the command line"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"yaml",
	"numpy",
	"pandas"
	"beamline_configuration"
	"pyPartAnalysis"
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/lm314/impact-t-beamline"
"Bug Tracker" = "https://github.com/lm314/impact-t-beamline/issues"